--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <tr>
 
 
-          <td><img src="descarga/Qrdescarga.png" alt="QRdescarga" style="width: 180px; height: 120px;"
+          <td><img src="descarga/Servicios.png" alt="QRdescarga" style="width: 180px; height: 120px;"
               id="Idimgdescarga"></td>
 
           <script>
@@ -112,7 +112,7 @@
         <tr>
 
 
-          <td><img src="descarga/Qrdescarga.png" alt="QRdescarga" style="width: 180px; height: 120px;"
+          <td><img src="descarga/Lotusqr.png" alt="QRdescarga" style="width: 180px; height: 120px;"
               id="Idimgdescarga"></td>
 
           <script>
