--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
           <td><a href="descarga/AppLotusweb.apk" download="AppLotusweb.apk"
               style="color: rgb(41, 13, 202); text-decoration: underline;">
-              <img src="descarga/Lotus.png" alt="Descarga App adntoid">
+              <img src="descarga/loto.png" alt="Descarga App adntoid">
               <p style="font-size: large;font-weight: bold;">Descarga App </p>
             </a></td>
         </tr>
