--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="bootstrap-5.0.2-dist/css/bootstrap.css" rel="stylesheet" type="text/css" />
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Plataforma de Servicios</title>
+  <title>Tienda Software</title>
 </head>
 
 <body class="body">
@@ -56,7 +56,7 @@
             var link = document.getElementById('Idimgdescarga');
             link.ondblclick = function (event) {
               event.preventDefault(); // Evita la acción por defecto del enlace (navegar a '#')
-              window.location.href = 'https://beatriztenorio764-afk.github.io/Beauty-Store/descarga/Qrdescargagrande.png'; // Redirige al enlace deseado
+              window.location.href = 'https://tiendatecno.github.io/TiendaTecno/descarga/Servicios.png'; // Redirige al enlace deseado
               console.log('Se hizo doble clic en el enlace');
             };
           </script>
@@ -119,7 +119,7 @@
             var link = document.getElementById('Idimgdescarga');
             link.ondblclick = function (event) {
               event.preventDefault(); // Evita la acción por defecto del enlace (navegar a '#')
-              window.location.href = 'https://beatriztenorio764-afk.github.io/Beauty-Store/descarga/Qrdescargagrande.png'; // Redirige al enlace deseado
+              window.location.href = 'https://tiendatecno.github.io/TiendaTecno/descarga/Qrloto.png'; // Redirige al enlace deseado
               console.log('Se hizo doble clic en el enlace');
             };
           </script>
