--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
 
 
           <td><img src="descarga/Qrloto.png" alt="QRdescarga" style="width: 180px; height: 120px;"
-              id="Idimgdescarga"></td>
+              id="Idimgdescargasd"></td>
 
           <script>
-            var link = document.getElementById('Idimgdescarga');
+            var link = document.getElementById('Idimgdescargasd');
             link.ondblclick = function (event) {
               event.preventDefault(); // Evita la acción por defecto del enlace (navegar a '#')
               window.location.href = 'https://tiendatecno.github.io/TiendaTecno/descarga/Qrloto.png'; // Redirige al enlace deseado
